# Expression-Signature-Discovery

./: .gitignore  Benchmarking_functions.py  README.md  pyproject.toml  simulation_functions.py  test_benchmarking_methods.py  test_file.py  test_simulation.py
Demo/: demo_simulation.ipynb
Source/: Benchmarking_functions.py  Data_Processing_Functions.py  Deconfounder.py  Lasso.py  requirements.txt  simulation_functions.py
Source/Benchmarking/: Deconfounder.py  Supervised_Methods.py  Unsupervised_Methods.py
Source/Evalulation/: eval.py
Source/Simulation/: RNA.py  alterations.py
Tests/: test_RNA.py  test_alterations.py  test_benchmarking_methods.py  test_simulation.py
data/ALL/: alt_real_ALL.csv  alterations_ALL.csv  combined_signatures_ALL.joblib  rna_real_ALL.csv  rna_simulated_ALL.csv  true_signatures_ALL.json
data/AML/: alt_real_AML.csv  alterations_AML.csv  combined_signatures_AML.joblib  rna_real_AML.csv  rna_simulated_AML.csv  true_signatures_AML.json
data/COAD/: alt_real_COAD.csv  alterations_COAD.csv  combined_signatures_COAD.joblib  true_signatures_COAD.json
data/IBC/: alt_real_IBC.csv  alterations_IBC.csv  true_signatures_IBC.json
data/OV/: alt_real_OV.csv  alterations_OV.csv  combined_signatures_OV.joblib  true_signatures_OV.json
source/benchmark_sigs/benchmarking/: __init__.py  cooccurence.py  dataset_eval.py  io.py  metrics.py  signatures.py  snr.py
source/benchmark_sigs/io/: writers.py
source/benchmark_sigs/preprocess/: fusions.py  integrate.py
source/benchmark_sigs/theory/: __init__.py  true_coef_effect.py
source/benchmark_sigs/utils/: __init__.py  align.py  filter.py  list.py
src/Benchmark_Sigs/io/: __init__.py  readers.py
src/Benchmark_Sigs/preprocess/: RNA.py  __init__.py  clinical.py  fusions.py  integrate.py  mutations.py
src/Benchmark_Sigs/simulate/: __init__.py
src/Benchmark_Sigs/utils/: checks.py  sample_ids.py
src/benchmark_sigs/config/: __init__.py  defaults.py
src/benchmark_sigs/io/: __init__.py  readers.py  writers.py
tests/: test_DPF.py  test_deconfounder.py  test_supervised_methods.py
(+48 files in other folders)
