[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "expression-signature-discovery"
version = "0.1.0"
description = "Simulation and benchmarking framework for gene expression signature discovery"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Alanah McIntosh" }]
license = { file = "LICENSE" }

dependencies = [
  "numpy<2",
  "pandas>=2.0",
  "scipy",
  "scikit-learn",
  "joblib",
  "pydeseq2==0.4.12",
  "matplotlib",
  "seaborn",
  "pytest",
  "ruff",
  "ipykernel",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["Benchmark_Sigs*"]
